login and error message

--- a/shop/templates/shop/footer.html
+++ b/shop/templates/shop/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer navbar navbar-expand-md navbar-dark bg-dark">
-    <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon bg-primary"></span>
     </button>
 
-    <div class="social-media-icons collapse navbar-collapse ml-auto mt-4" id="navbarsExample04">
+    <div class="social-media-icons collapse navbar-collapse ml-auto mt-4" id="navbarsExample05">
       <ul class="list-inline">
                 <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
@@ -16,6 +16,6 @@
 
     <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarsExample04">
       
-        <div class="">© 2019 Copyright: <a href="#"> www.shinegroup.com</a></div>
+        <div class="text-light">© 2019 Copyright: <a href="#"> www.shinegroup.com</a></div>
     </div>
   </footer>
