--- a/shop/templates/shop/inventory_management.html
+++ b/shop/templates/shop/inventory_management.html
@@ -19,13 +19,13 @@
                 {{ form.item_type|as_crispy_field }}
                 {{ form.speaker|as_crispy_field }}
                 {{ form.storage|as_crispy_field }}
+                {{ form.cctv|as_crispy_field }}
                 {{ form.camera|as_crispy_field }}
                 {{ form.dvr_smps|as_crispy_field }}
                 {{ form.comp_peripherals|as_crispy_field }}
                 {{ form.ups|as_crispy_field }}
                 {{ form.antivirus|as_crispy_field }}
                 {{ form.printer|as_crispy_field }}
-                {{ form.cctv|as_crispy_field }}
                 {{ form.kb_mouse|as_crispy_field }}
                 {{ form.item_specification|as_crispy_field }}
                 {{ form.user|as_crispy_field }}
@@ -42,7 +42,7 @@
                         {{ form.selling_price|as_crispy_field }}
                     </div>
                 </div>
-                <button class="btn btn-sm btn-primary btn-block" type="submit">Save Data</button>
+                <button class="offset-lg-4 offset-sm-4 offset-xs-4 col-4 offset-md-4 btn btn-sm btn-primary btn-block" type="submit">Save Data</button>
             </form>
         </div>
     </div>
