--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -5,7 +5,7 @@
     <div class="container-fluid marketing mb-5">
 
         <div class="row">
-            <div class="offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-10 pt-3">
+            <div class="offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2 col-10 pt-3">
                 <div class="row">
 
                     <div class="col-sm-12 col-md-6">
@@ -20,9 +20,9 @@
                 </div>
             </div>
 
-            <div class="offset-lg-1 offset-md-1 offset-sm-1 offset-xs-1 col-10 pt-3">
+            <div class="offset-lg-2 offset-md-2 offset-sm-2 offset-xs-2 col-10 pt-3">
                 <form name="inventory" action="" method="">
-                    <table class="table table-hover table-responsive">
+                    <table class="table table-sm table-hover table-responsive">
                         <thead class="bg-dark text-light">
                         <tr>
                             <th scope="col">SL No.</th>
@@ -42,7 +42,7 @@
                         <tbody>
                         {% for item in object %}
 
-                            <tr class="bg-info text-light">
+                            <tr class="bg-light text-dark">
                                 <th scope="row">{{ forloop.counter}}</th>
                                 <td>{{ item.id }}</td>
                                 <td>{{ item.category }}</td>
@@ -53,7 +53,7 @@
                                 <td>{{ item.model_no }}</td>
                                 <td>{{ item.purchase_price }}</td>
                                 <td>{{ item.selling_price }}</td>
-                                <td><a href="{% url 'shop:update' item.id %}"><i class="fas fa-edit text-light"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'shop:delete' item.id %}"><i class="fas fa-trash-alt text-danger" aria-hidden="true"></i></a></td>
+                                <td><a href="{% url 'shop:update' item.id %}"><i class="fas fa-edit text-dark"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'shop:delete' item.id %}"><i class="fas fa-trash-alt text-danger" aria-hidden="true"></i></a></td>
                             </tr>
 
                         {% endfor %}
