--- a/shop/templates/shop/user_registration_form.html
+++ b/shop/templates/shop/user_registration_form.html
@@ -6,10 +6,10 @@
     <div class="container-fluid marketing mb-5">
         <div class="row">
             <div class="text-light offset-lg-2 offset-md-2 col-lg-8 col-md-8 col-sm-12 col-xs-12 pt-5">
-                <div class="card card-signup bg-dark">
+                <div class="card card-signup bg-transparent">
                     <div class="card-body">
-                      <h4 class="card-title text-center text-light"><i class="fas fa-user-plus fa-2x"></i></h4>
-                      <form class="text-light form-signin form-control-sm" name="login" action="" method="POST">
+                      <h4 class="card-title text-center text-dark"><i class="fas fa-user-plus fa-2x"></i></h4>
+                      <form class="text-dark font-weight-bold form-signin form-control-sm" name="login" action="" method="POST">
                         {% csrf_token %}
                         <div class="row">
                             <div class="col">
